# Experimentos_ROS

./: README.md
Archivos_Modelo_3D/: README.md
Archivos_Modelo_3D/Archivos_Blender/: helice.blend
Archivos_Modelo_3D/Archivos_GrabCad/: Assem2.SLDASM  Part1.SLDPRT  Part7.SLDPRT
Archivos_Modelo_3D/Archivos_Solidwork/Dron_Sin_Armar/: PART3.STL  PART5.STL  PART6.STL
Archivos_Modelo_3D/Archivos_Solidwork/Dron_armado/: Assem2 - Assem1-1 Part7-1.STL  Assem2 - Assem1-2 part5-1.STL  Assem2 - Assem1-3 part5-1.STL  Assem2 - Part1-2.STL  Assem2 - Part1-3.STL  Assem2 - Part4-5.STL  Assem2 - Part6-1.STL  Assem2 - Part6-3.STL  Assem2 - Part6-4.STL
Brazo_Robot/robot1_description/robot1_description/: CMakeLists.txt  package.xml
Brazo_Robot/robot1_description/robot1_description/config/: robot1_gazebo_control_Position.yaml  trajectory_controller.yaml
Brazo_Robot/robot1_description/robot1_description/launch/: display.launch
Brazo_Robot/robot1_description/robot1_description/src/: Mover_Articulacion.py
Brazo_Robot/robot1_description/robot1_description/urdf/: robot.gazebo  robot1.urdf  robot1_reduced.xacro
Matlab/: README.md
Matlab/Archivos Generales/: Config_Red.mlx  Constantes_Workspace.mlx  LazoAbierto_ConROS.slx  LazoAbierto_SinROS.slx
Matlab/Comparacion/EE/: Diseno_Espacio_Estados.mlx  Espacio_Estados_sin_ROS_Comparacion.slx  Espacio_Estados_sin_ROS_Comparacion.slx.r2021b  Espacio_Estados_sin_ROS_Comparacion.slxc
Matlab/Comparacion/GPC/: Calculo_de_K_GPC.m  GPC_Comparacion.mlx  GPC_conROS_Comparacion.slx  GPC_conROS_Comparacion.slxc  MatrizG.m  diophantine.m  transferencia2.m
Matlab/Comparacion/PD/: PD_ConROS_Comparacion.slx  PD_SinROS_Comparacion.slx
Matlab/Espacio_Estados/: Diseno_Espacio_Estados.m  Diseno_Espacio_Estados.mlx  Espacio_Estados_con_ROS.slx
Matlab/MPC - Libro Eduardo Camacho - Model Predictive Control/: GPC_Recursivo_Qball.mlx  deltaUFree.m  descomp.m  descompMPC.m  diophantineMIMO.m
Matlab/MPC - Libro Model Predictive Control System Design and Implementation Using Matlab/: Codigos_Cap_1.mlx  Codigos_Cap_3.mlx  Codigos_Cap_5.mlx  Codigos_Cap_6.mlx  Codigos_Cap_7.mlx  Iint.m  MPC_Qball_1.mlx  MPC_Qball_2.mlx  Mder.m  Mdu.m  Mu.m  Mucon.m  QPhild.m  Tutorial31.m  cmpc.m  cssimucon.m  cssimuob.m  dmpc.m  inte.m  lagc.m  lagd.m  lagmodel.m  motor1.mlx  motor2.mlx  mpcgain.m  simuob.m  simuuc.m
Matlab/PD/Diseno/: PD_phi_theta.mlx  PD_psi.mlx  PD_x.mlx  PD_y.mlx  PD_z.mlx
Matlab/PD/Imágenes/: PDs.tgn
Matlab/PD/Simulink/: PD_SinROS.slx
Matlab/Trayectorias/: Constantes_Workspace_Trayectorias.mlx  Diseno_Espacio_Estados_Trayectorias.mlx  Espacio_Estados_con_ROS_Trayectorias.slx  Espacio_Estados_sin_ROS_Trayectorias.slx  PD_ConROS_Trayectorias.slx  PD_SinROS_Trayectorias.slx
Matlab/Trayectorias/GPC/: BA_MIMO.m
Qball/Archivos_Importantes/Archivos_STL/Dron_Sin_Armar/: PART2.STL  PART4.STL  brazo.STL
Qball/Archivos_Importantes/Archivos_STL/Dron_armado/: Assem2 - Assem1-1 part5-1.STL  Assem2 - Assem1-2 Part7-1.STL  Assem2 - Assem1-3 Part7-1.STL  Assem2 - Assem1-4 Part7-1.STL  Assem2 - Assem1-4 part5-1.STL  Assem2 - Part1-1.STL  Assem2 - Part1-4.STL  Assem2 - Part2-1.STL  Assem2 - Part3-1.STL  Assem2 - Part4-1.STL  Assem2 - Part4-2.STL  Assem2 - Part4-4.STL  Assem2 - Part6-2.STL
Qball/Archivos_Importantes/Archivos_Simulink/: Assem1.SLDASM  Part2.SLDPRT  Part3.SLDPRT  Part4.SLDPRT  Part6.SLDPRT  part5.SLDPRT
Qball/Archivos_Importantes/Markdown/: Elemento_Link.md  urdf.md
Qball/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Qball/devel/lib/pkgconfig/: qball.pc
Qball/src/qball/: CMakeLists.txt  README.md  package.xml
Qball/src/qball/launch/: Lanzador_Qball.launch
Qball/src/qball/models/qball/: model.config  model.sdf
Qball/src/qball/models/qball/meshes/: esfera.stl
Qball/src/qball/scripts/: Publisher.py  Subscriber.py
Qball/src/qball/worlds/: Mundo.world
dron_cinematico/: CMakeLists.txt  README.md  package.xml
dron_cinematico/launch/: lanzador_2_quadrotores.launch  lanzador_principal.launch  lanzador_secundario.launch  visualizacion_graficas.launch  visualizacion_lider_seguidor_graficas.launch
dron_cinematico/meshes/: indicador.stl  sujetador.stl  tuerca.stl  x.stl  x1.stl  x2.stl  y1.stl  y2.stl
dron_cinematico/rviz/: config_lider_seguidor.rviz  my_hector_controller_paths.rviz
dron_cinematico/scripts/: README.md  lider_seguidor_grafica.py
dron_cinematico/scripts/lemniscata_helice/: README.md  lemniscata_helice.py
dron_cinematico/scripts/lemniscata_helice_grafica/: README.md  lemniscata_helice_grafica.py
dron_cinematico/scripts/lider_seguidor/: README.md  lider_seguidor.py
dron_cinematico/scripts/movimiento_circular/: README.md  movimiento_circular.py
dron_cinematico/src/lemniscata_helice/: README.md  lemniscata_helice.cpp
dron_cinematico/src/lemniscata_helice_grafica/: README.md  lemniscata_helice_grafica.cpp
dron_cinematico/src/lider_seguidor/: README.md  lider_seguidor.cpp
dron_cinematico/src/lider_seguidor_grafica/: README.md  lider_seguidor_grafica.cpp
dron_cinematico/src/movimiento_circular/: README.md  movimiento_circular.cpp
dron_cinematico/urdf/: my_hector_quadrotor_plugins.xacro  quadrotor.gazebo  quadrotor.xacro  quadrotor_reducido.xacro  quadrotor_seguidor.xacro
qball/: Crear_Workspace.md  README.md
qball/launch/: Lanzador_Qball.launch
qball/scripts/: Publicar_en_ModelState.py  Publicar_en_un_Topico.py  Service.py  Subscriber.py  Subscribirse_a_un_Topico.py
qball/src/: set_speed_joint_plugin.cpp
(+17 files in other folders)
